# Grounded_SAM

./: .gitignore  ARCHITECTURE.md  Basketball_Purple_Segmentation.py  README.md  download_external_harddisk.py  example_download_and_detect.py  insert_segment_drone.py  main.py  prepare_yolo_dataset.py  process_drone_video.py  pyproject.toml  reorganize_synthetic_dataset.py  result_test.py
image_processing/: __init__.py  football_image.py
models/: __init__.py  grounded_dino.py  sam2_model.py
utils/: __init__.py  device.py
video_processing/: __init__.py  video_processor.py
